# waterpump

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
doc/: connection-plan.drawio
doc/vfd-manuals/650S/: chat-manual-compatibility.txt
fw/: CMakeLists.txt  sdkconfig
fw/components/gpio/: CMakeLists.txt  gpio_evaluateSwitch.cpp  gpio_evaluateSwitch.hpp
fw/components/max7219/: max7219.c
fw/main/: CMakeLists.txt  common.hpp  config.h  credentials.default.h  display.cpp  display.hpp  flowSensor.cpp  flowSensor.hpp  global.cpp  global.hpp  main.cpp  mode.cpp  mode.hpp  mqtt.c  mqtt.cpp  mqtt.h  mqtt.hpp  mqttTopics.h  pressureSensor.cpp  pressureSensor.hpp  pump.hpp  pumpControl.cpp  pumpControl.hpp  servo.cpp  servo.hpp  vfd.cpp  vfd.hpp  wifi.c  wifi.h
main/: CMakeLists.txt  analogsensoren.c  analogsensoren.h  app_main.c  digitalsensoren.c  digitalsensoren.h  mqtt.c  mqtt.h  sensordeklaration.c  sensordeklaration.h  wasserpumpe.c  wasserpumpe.h
sw/: CMakeLists.txt  a2d.c  a2d.h  bsp_io_pins.txt  main.cpp  modbus.c  modbus.h  time.c  time.h  uart.c  uart.h
sw/bspgen/: gen.pl
sw_sim/: modbustest.c  uart_sim.c
