idf_component_register(
    SRCS 
        "main.cpp"
        "mode.cpp"
        "vfd.cpp"
        "servo.cpp"
        "pressureSensor.cpp"
        "pumpControl.cpp"
        "wifi.c"
        "mqtt.c"
        "mqtt.cpp"
        "global.cpp"
        "display.cpp"
        "flowSensor.cpp"
    INCLUDE_DIRS 
        "."
    )
